--- a/documentation/be-docker/env-files/.env.docker
+++ b/documentation/be-docker/env-files/.env.docker
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=HawlerForecastBackend
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:2006
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,13 +21,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=hawler-forecast-backend-database
 DB_PORT=5432
-DB_DATABASE=hawler_forcast
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=laravel
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,16 +35,16 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=hawler-forecast-backend-redis
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 MAIL_MAILER=log
