--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "dedoc/scramble": "^0.13.13",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-translatable": "^6.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
