--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "dedoc/scramble": "^0.13.13",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.44",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-translatable": "^6.12"
